nextcloud/overlays/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
  labels:
    app: nextcloud
spec:
  rules:
  - host: "nextcloud.dev.kronkltd.net"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: "nextcloud"
          servicePort: http
  tls:
  - hosts:
    - nextcloud.dev.kronkltd.net
    secretName: nextcloud-tls
